Agregando Nombre Y Matricula

--- a/Pages/Registro/R_Verduras.razor
+++ b/Pages/Registro/R_Verduras.razor
@@ -1,5 +1,5 @@
 @page "/Verdura"
-@page "/Verdura /{VerdurasId:int}"
+@*page "/Verdura //{VerduraId:int}"*@
 @inject VerdurasBLL VerdurasBLL
 
 <EditForm Model="verdura">
@@ -16,7 +16,7 @@
                 <div class="row justify-content-between">
 
                     <div class="col-3">
-                        <label>Verdura Id</label>
+                        <label>VerduraId</label>
                         <div class="input-group mb-3">
                             <input type="number" class="form-control" aria-label="Recipient's username"
                                 aria-describedby="basic-addon2">
