--- a/Pages/Consultas/C_Verduras.razor
+++ b/Pages/Consultas/C_Verduras.razor
@@ -8,11 +8,12 @@
         <div class="card">
 
             <div class="card-header">
-                <h4>Consulta de Verduras</h4>
+                <h2>Consulta de Verduras</h2>
             </div>
         </div>
         <div class="card-body">
-            <button class="btn btn-outline-primary"> <i class="oi oi-magnifying-glass" /> Buscar </button>
+            <button @onclick="Buscar" class="btn btn-outline-primary"> <i class="oi oi-magnifying-glass" /> Buscar
+            </button>
         </div>
 
         <table class="table table-striped table-hover mt-4" style="cursor: pointer;">
@@ -20,27 +21,35 @@
             <thead class="thead">
                 <tr class="table">
                     <th>VerduraId</th>
-                    <th>VitaminaId</th>
                     <th>Nombre</th>
                     <th>Fecha de Creacion</th>
                     <th>Observaciones</th>
                 </tr>
             </thead>
             <tbody>
-                @*foreach (var item in collection)*@
+
+                @foreach (var verdura in verduras)
                 {
-                <tr>
-                    <th></th>
-                    <th></th>
-                    <th></th>
-                    <th></th>
-                    <th></th>
-                </tr>
+                    <tr>
+                        <td>@verdura.VerduraId</td>
+                        <td>@verdura.Nombre</td>
+                        <td>@verdura.FechaCreacion.ToString("dd/MM/yyyy")</td>
+                        <td>@verdura.Observaciones </td>
+                        <td><a class="btn btn-sm btn-outline-primary oi oi-eye" href="Verdura/@verdura.VerduraId">Ver</a>
+                        </td>
+                    </tr>
                 }
+
             </tbody>
         </table>
     </div>
 </EditForm>
-@code {
+@code
+{
+    public List<Verduras> verduras { get; set; } = new List<Verduras>();
 
+    void Buscar()
+    {
+        verduras = verdurasBLL.GetList();
+    }
 }
