--- a/Pages/Consultas/C_Vitaminas.razor
+++ b/Pages/Consultas/C_Vitaminas.razor
@@ -8,24 +8,48 @@
         <div class="card">
 
             <div class="card-header">
-                <h4>Consulta de Vitaminas</h4>
+
+                <h2>Consulta de Vitaminas</h2>
             </div>
         </div>
-        <div class="card-body">
-            <button class="btn btn-outline-primary"> <i class="oi oi-magnifying-glass" /> Buscar </button>
+         <div class="col-3">
+                <button @onclick="Buscar" class="btn btn-outline-primary input-group-text mt-4" >
+                    <i class="oi oi-magnifying-glass"/>Buscar</button>
+            </div>
         </div>
+       
+   
+     <table class="table table-striped table-hover mt-4" style="cursor: pointer;">
 
-        <table class="table table-striped table-hover mt-4" style="cursor: pointer;">
+        <thead class="thead">
+            <tr class="table">
+                <th>VitaminaId</th>
+                <th>Descripcion</th>
+                <th>Unidad de Medida</th>
+            </tr>
+        </thead>
 
-            <thead class="thead">
-                <tr class="table">
-                    <th>VitaminaId</th>
-                    <th>Descripcion</th>
-                    <th>Unidad de medida</th>
+        <tbody>
+
+            @foreach (var vitamina in vitaminas)
+            {
+                <tr>
+                    <td>@vitamina.VitaminaId</td>
+                    <td>@vitamina.Descripcion</td>
+                    <td>@vitamina.UnidadMedida</td>
+                 
                 </tr>
-            </thead>
-        </table>
-    </div>
+            }
+
+        </tbody>
+
+    </table>
 </EditForm>
-@code {
+@code  {
+    public List<Vitaminas> vitaminas { get; set; } = new List<Vitaminas>();
+
+    void Buscar()
+    {
+        vitaminas = vitaminasBLL.GetList();
+    }
 }
