--- a/Pages/_Layout.cshtml
+++ b/Pages/_Layout.cshtml
@@ -11,7 +11,9 @@
     <link rel="stylesheet" href="css/bootstrap/bootstrap.min.css" />
     <link href="css/site.css" rel="stylesheet" />
     <link href="AP2_Yunilda.styles.css" rel="stylesheet" />
+     <link rel="stylesheet" href="_content/Radzen.Blazor/css/default.css">
     <component type="typeof(HeadOutlet)" render-mode="ServerPrerendered" />
+ 
 </head>
 <body>
     @RenderBody()
